[package]
name = "crockford-uuid"
version = "0.1.2"
edition = "2021"
authors = ["AdeThorMiwa <BenDaMyth@gmail.com>"]
keywords = [
    "guid",
    "unique",
    "uuid",
    "crockford"
]
description = "A library to generate and parse Crockford Base32 Identifiers."
homepage = "https://github.com/AdeThorMiwa/crockford-uuid"
repository = "https://github.com/AdeThorMiwa/crockford-uuid"
readme = "README.md"
license = "MIT"

[dependencies]
base32 = "0.4.0"
lazy_static = "1.4.0"
ring = "0.16.20"
bytes = "1.4.0"
num-bigint = "0.4.3"
